# MarkTrader

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  app.py  config.py  config.sample.yml  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  user-settings.sample.yml
.github/workflows/: pre-commit-yml  pre-commit.yml  python-app.yml
api/: __init__.py  authentication.py  price_history.py  user_settings.py
client/: .eslintignore  .eslintrc.json  package-lock.json  package.json  tsconfig.json
client/public/: index.html  manifest.json
client/src/: apiClient.ts  authentication.css  authentication.tsx  index.css  index.ts  index.tsx
client/src/assets/: canvasjs.min.js
client/src/common/: apiClient.ts  helpers.ts  models.ts
client/src/components/: authentication.tsx  priceHistory.tsx  toggle.css  toggle.tsx  userSettingsPanel.tsx
common/: config.py  constants.py  enums.py  models.py  utils.py
config/: app_config.py
daemons/: authentication.py
models/: authentication.py  brokerage.py  exceptions.py  user_settings.py
services/: authentication.py  brokerage.py
test/backend/unit/: conftest.py  test_config.py
test/backend/unit/api/: conftest.py  test_authentication.py  test_user_settings.py
test/backend/unit/config/: test_app_config.py
test/backend/unit/daemons/: test_authentication.py
test/backend/unit/services/: test_authentication.py  test_brokerage.py
