[tool.poetry]
name = "marktrader"
version = "0.1.0"
description = "Automated Trading Application"
authors = ["Greg Meltzer <gregory.m.meltzer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
keyring = "^23.11.0"
confz = "^1.7.0"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
mypy = "^0.991"
black = "^22.12.0"
pytest = "^7.2.0"
mock = "^4.0.3"
"keyrings.alt" = "^4.2.0"
httpx = "^0.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
